--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yucaib",
+  "homepage": "https://yucaib.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +11,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "predeploy": "npm run build",   
+    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
