--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "yucaib",
-  "homepage": "https://yucaib.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,16 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "predeploy": "npm run build",   
-    "deploy": "gh-pages -d build"
+    "web-vitals": "^2.1.4"
   },
+  "homepage": "https://yucaib.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
